syntax = "proto3";

package proto;

import "gorums.proto";

import "google/protobuf/empty.proto";

option go_package = "github.com/relab/hotstuff/internal/proto/wendy";

service Wendy {
  rpc Propose(BlockBls) returns (google.protobuf.Empty) {
    option (gorums.multicast) = true;
  }

  rpc Vote(PartialCertBls) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }

  rpc NewView(NewViewBls) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }

  rpc ProofNoCommit(Proof) returns (google.protobuf.Empty) {
    option (gorums.unicast) = true;
  }
}

message Command { bytes Data = 1; }

message Index {
  int32 ReplicaID = 1;
  bool Exists = 2;
}

message BlockBls {
  bytes ParentHash = 1;
  QuorumCertBls QC = 2;
  int64 Height = 3;
  repeated Command Commands = 4;
}

message PartialSigBls {
  int32 ReplicaID = 1;
  bytes S = 2;
}

message PartialCertBls {
  PartialSigBls Sig = 1;
  bytes Hash = 2;
}

message QuorumCertBls {
  repeated bytes Sig = 1;
  bytes Hash = 2;
  repeated Index I = 3;
}

message BitVector {
  repeated bool Bits = 1;
}

message NewViewBls {
  QuorumCertBls QC = 1;
  PartialSigBls MultiSig = 2;
  BitVector BV = 3;
}

message IndexPublicKeys {
  int32 ReplicaID = 1;
  BitVector BV = 2;
}

message Proof {
  PartialSigBls AggSig = 1;
  repeated IndexPublicKeys PublicKeyIndices = 2; 
}